WIP docs for schema extension

--- a/docs-next/pages/guides/schema-extension.mdx
+++ b/docs-next/pages/guides/schema-extension.mdx
@@ -2,6 +2,27 @@ import { Markdown } from '../../components/Page';
 
 # Schema Extension
 
-(coming soon)
+!> This page covers the basics of schema extension in Keystone Next but still needs work to cover
+the topic fully. Please reach out to us at [@KeystoneJS](https://twitter.com/keystonejs) with your
+feedback and questions!
+
+Keystone Next generates an **executable GraphQL Schema** based on your app's schema, which is then
+made available through the GraphQL API.
+
+This lets you create your own **custom GraphQL Types, Queries and Resolvers** with logic that's
+specific to your app. You can also integrate external services into your schema as if they were
+built into Keystone, and even use other GraphQL libraries like [Nexus](https://nexusjs.org) with
+Keystone seamlessly.
+
+Some of the things you can do with this include:
+
+- Expose queries with hand crafted filters and logic, e.g to find the most popular posts
+- Build business logic for e-commerce shopping carts, ordering and payment processing
+- Expose data from database views, aggregate queries, the file system, or any async function
+- Consolidate data from external systems through a unified GraphQL schema
+- Integrate with third-party services like Algolia for search results that return Graph data from
+  Keystone
+
+## Getting Started
 
 export default ({ children }) => <Markdown>{children}</Markdown>;
